# intentionally-left-blank

./: README.md  intentionally-left-blank.desktop  pyproject.toml
src/intentionally_left_blank/: __main__.py
