[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intentionally-left-blank"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-2.0-only OR GPL-3.0-only"
keywords = []
authors = [
  { name = "GregoryLand", email = "landjgregory@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "PySide6",
]

[project.urls]
Documentation = "https://github.com/GregoryLand/intentionally-left-blank#readme"
Issues = "https://github.com/GregoryLand/intentionally-left-blank/issues"
Source = "https://github.com/GregoryLand/intentionally-left-blank"

[project.scripts]
intentionally-left-blank = "intentionally_left_blank.__main__:main"

[tool.hatch.version]
path = "src/intentionally_left_blank/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/intentionally_left_blank tests}"

[tool.coverage.run]
source_pkgs = ["intentionally_left_blank", "tests"]
branch = true
parallel = true
omit = [
  "src/intentionally_left_blank/__about__.py",
]

[tool.coverage.paths]
intentionally-left-blank = ["src/intentionally_left_blank", "*/intentionally_left_blank/src/intentionally_left_blank"]
tests = ["tests", "*/intentionally_left_blank/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
